--- a/build.gradle
+++ b/build.gradle
@@ -27,10 +27,10 @@ dependencies
 	compile gradleApi()
 	compile localGroovy()
 	
-	
 	packed 'org.ow2.asm:asm-all:4.1'
 	packed 'com.google.guava:guava:14.0.1'
 	packed 'net.sourceforge.argo:argo:3.4'
 	packed 'net.sf.opencsv:opencsv:2.3'
 	packed 'com.github.tony19:named-regexp:0.1.9'
+	packed 'net.md-5:SpecialSource:1.5'
 }
