--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,8 @@ dependencies
 	compile gradleApi()
 	compile localGroovy()
 	
-	packed 'org.ow2.asm:asm-all:4.1'
+	packed fileTree(dir: 'lib', include: '*.jar')
+	
 	packed 'com.google.guava:guava:14.0.1'
 	packed 'net.sourceforge.argo:argo:3.4'
 	packed 'net.sf.opencsv:opencsv:2.3'
