--- a/build.gradle
+++ b/build.gradle
@@ -48,10 +48,11 @@ dependencies
     //packed 'net.sf.opencsv:opencsv:2.3'
     packed 'com.github.tony19:named-regexp:0.1.9'
     packed 'net.md-5:SpecialSource:1.5'
+    packed 'com.googlecode.java-diff-utils:diffutils:1.3.0'
 
     // JDT for the formatter
     packed "org.jibx.config.3rdparty.org.eclipse:org.eclipse.core.resources:3.7.100.v20110510-0712"
-    runtime "org.jibx.config.3rdparty.org.eclipse:org.eclipse.core.runtime:3.7.0.v20110110"
+    packed "org.jibx.config.3rdparty.org.eclipse:org.eclipse.core.runtime:3.7.0.v20110110"
     packed "org.jibx.config.3rdparty.org.eclipse:org.eclipse.equinox.common:3.6.0.v20110523"
     packed "org.eclipse.tycho:org.eclipse.jdt.core:3.8.1.v20120125-1544"
     packed "org.jibx.config.3rdparty.org.eclipse:org.eclipse.text:3.5.100.v20110505-0800"
