closer to fixing all the patches

--- a/src/main/resources/misc/formatter.cfg
+++ b/src/main/resources/misc/formatter.cfg
@@ -209,7 +209,7 @@ org.eclipse.jdt.core.formatter.insert_space_before_comma_in_enum_constant_argume
 org.eclipse.jdt.core.formatter.insert_space_before_semicolon=do not insert
 org.eclipse.jdt.core.formatter.brace_position_for_constructor_declaration=next_line
 org.eclipse.jdt.core.formatter.number_of_blank_lines_at_beginning_of_method_body=0
-org.eclipse.jdt.core.formatter.insert_space_before_colon_in_conditional=insert
+org.eclipse.jdt.core.formatter.insert_space_before_colon_in_conditional=do not insert
 org.eclipse.jdt.core.formatter.indent_body_declarations_compare_to_type_header=true
 org.eclipse.jdt.core.formatter.insert_space_before_opening_paren_in_annotation_type_member_declaration=do not insert
 org.eclipse.jdt.core.formatter.wrap_before_binary_operator=true
