--- a/build.gradle
+++ b/build.gradle
@@ -20,10 +20,6 @@ jar
             it.isDirectory() ? it : zipTree(it).matching {
                 exclude "META-INF", "META-INF/**", "*META-INF*", "meta-inf"
                 exclude "**.jar", "**/*.jar", "*.jar"
-                exclude "plugin.properties"
-                exclude "plugin.xml"
-                exclude "about.html"
-                exclude ".api_description"
             }
         }
     }
@@ -46,9 +42,9 @@ dependencies
 
     packed 'net.sourceforge.argo:argo:3.4'
     packed 'net.sf.opencsv:opencsv:2.3'
+    packed 'org.apache.commons:commons-lang3:3.1'
     packed 'com.github.tony19:named-regexp:0.1.9'
     packed 'net.md-5:SpecialSource:1.5'
-    packed 'com.googlecode.java-diff-utils:diffutils:1.3.0'
 
     // JDT for the formatter
     //packed "org.jibx.config.3rdparty.org.eclipse:org.eclipse.core.resources:3.7.100.v20110510-0712"
