--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'eclipse'
 apply plugin: 'groovy'
-apply plugin: 'signing'
+//apply plugin: 'signing'
 apply plugin: 'maven'
 
 group = 'com.github.abrarsyed.gmcp'
@@ -82,21 +82,21 @@ artifacts {
     archives sourcesJar
 }
 
-signing { sign configurations.archives }
+//signing { sign configurations.archives }
 
 uploadArchives {
     repositories.mavenDeployer {
 
-        beforeDeployment { MavenDeployment deployment ->
-            signing.signPom(deployment)
-        }
+        //beforeDeployment { MavenDeployment deployment ->
+        //    signing.signPom(deployment)
+        //}
 
-        snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots") {
-            authentication(userName: sonatypeUsername, password: sonatypePassword)
-        }
+        //snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots") {
+        //    authentication(userName: sonatypeUsername, password: sonatypePassword)
+        //}
 
-//        // local testing only.
-//        snapshotRepository(url: "file://D:/Users/AbrarSyed/EclipseWorkspace/MavenRepo")
+        // local testing only.
+        snapshotRepository(url: "file://C:/Users/sebastian/.m2/repository/")
 
         repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2") {
             authentication(userName: sonatypeUsername, password: sonatypePassword)
