Reverted some changes I made for local development.

--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'eclipse'
 apply plugin: 'groovy'
-//apply plugin: 'signing'
+apply plugin: 'signing'
 apply plugin: 'maven'
 
 group = 'com.github.abrarsyed.gmcp'
@@ -87,16 +87,16 @@ artifacts {
 uploadArchives {
     repositories.mavenDeployer {
 
-        //beforeDeployment { MavenDeployment deployment ->
-        //    signing.signPom(deployment)
-        //}
+        beforeDeployment { MavenDeployment deployment ->
+            signing.signPom(deployment)
+        }
 
-        //snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots") {
-        //    authentication(userName: sonatypeUsername, password: sonatypePassword)
-        //}
+        snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots") {
+            authentication(userName: sonatypeUsername, password: sonatypePassword)
+        }
 
         // local testing only.
-        snapshotRepository(url: "file://C:/Users/sebastian/.m2/repository/")
+        // snapshotRepository(url: "file://C:/Users/sebastian/.m2/repository/")
 
         repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2") {
             authentication(userName: sonatypeUsername, password: sonatypePassword)
