--- a/build.gradle
+++ b/build.gradle
@@ -82,7 +82,7 @@ artifacts {
     archives sourcesJar
 }
 
-//signing { sign configurations.archives }
+signing { sign configurations.archives }
 
 uploadArchives {
     repositories.mavenDeployer {
