--- a/build.gradle
+++ b/build.gradle
@@ -96,11 +96,11 @@ uploadArchives {
         }
 
         // local testing only.
-        snapshotRepository(url: 'file://'+project.projectDir.getPath()+"/../MavenRepo")
+//        snapshotRepository(url: 'file://'+project.projectDir.getPath()+"/../MavenRepo")
 
-//        repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2") {
-//            authentication(userName: sonatypeUsername, password: sonatypePassword)
-//        }
+        repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2") {
+            authentication(userName: sonatypeUsername, password: sonatypePassword)
+        }
 
         pom {
             groupId = project.group
