--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'signing'
 apply plugin: 'maven'
 
 group = 'com.github.abrarsyed.gmcp'
-version = '0.7-SNAPSHOT'
+version = '0.7.1'
 archivesBaseName = 'GMCP'
 targetCompatibility = '1.6'
 sourceCompatibility = '1.6'
