--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import org.gradle.api.artifacts.maven.MavenDeployment
+
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'eclipse'
@@ -6,7 +8,7 @@ apply plugin: 'signing'
 apply plugin: 'maven'
 
 group = 'com.github.abrarsyed.gmcp'
-version = '0.7.3-SNAPSHOT'
+version = '0.7.4-SNAPSHOT'
 archivesBaseName = 'GMCP'
 targetCompatibility = '1.6'
 sourceCompatibility = '1.6'
@@ -54,13 +56,13 @@ dependencies
     compile localGroovy()
 
     // all of these marked as packed.
-
     packed fileTree(dir: 'lib', include: '*.jar')
 
     compile 'net.sourceforge.argo:argo:3.4'
     compile 'net.sf.opencsv:opencsv:2.3'
     compile 'com.github.tony19:named-regexp:0.1.9'
     compile 'net.md-5:SpecialSource:1.5'
+    compile 'com.googlecode.java-diff-utils:diffutils:1.3.0'
 
     // JDT for the formatter
     //packed "org.jibx.config.3rdparty.org.eclipse:org.eclipse.core.resources:3.7.100.v20110510-0712"
@@ -91,12 +93,12 @@ uploadArchives {
             signing.signPom(deployment)
         }
 
-//        snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots") {
-//            authentication(userName: sonatypeUsername, password: sonatypePassword)
-//        }
+        snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots") {
+            authentication(userName: sonatypeUsername, password: sonatypePassword)
+        }
 
         // local testing only.
-        snapshotRepository(url: 'file://'+project.projectDir.getPath()+"/../MavenRepo")
+//        snapshotRepository(url: 'file://'+project.projectDir.getPath()+"/../MavenRepo")
 
         repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2") {
             authentication(userName: sonatypeUsername, password: sonatypePassword)
