--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,11 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
     from 'build/docs/javadoc'
 }
 
+task groovydocJar(type: Jar, dependsOn: groovydoc) {
+    classifier = 'groovydoc'
+    from 'build/docs/groovydoc'
+}
+
 configurations
 {
     packed
@@ -58,13 +63,8 @@ dependencies
     compile 'com.github.tony19:named-regexp:0.1.9'
     compile 'net.md-5:SpecialSource:1.5'
     compile 'com.googlecode.java-diff-utils:diffutils:1.3.0'
-
-    // JDT for the formatter
-    //packed "org.jibx.config.3rdparty.org.eclipse:org.eclipse.core.resources:3.7.100.v20110510-0712"
-    //packed "org.jibx.config.3rdparty.org.eclipse:org.eclipse.core.runtime:3.7.0.v20110110"
-    //packed "org.jibx.config.3rdparty.org.eclipse:org.eclipse.equinox.common:3.6.0.v20110523"
-    //packed "org.eclipse.tycho:org.eclipse.jdt.core:3.8.1.v20120125-1544"
-    //packed "org.jibx.config.3rdparty.org.eclipse:org.eclipse.text:3.5.100.v20110505-0800"
+    compile 'com.cloudbees:diff4j:1.1' // for difing and patching
+    compile 'com.github.abrarsyed.jastyle:jAstyle:0.9' // formatting
 }
 
 task sourcesJar(type: Jar) {
